Fix issues surrounding scrolling and alignment.
Closes #80

--- a/app/components/target-wrapper/target-wrapper.styl
+++ b/app/components/target-wrapper/target-wrapper.styl
@@ -14,15 +14,6 @@
     transform translate3d(0, -1.8em, 0)
 
 
-[data-component="target-wrapper"]
-  @media mobileMaxWidthQuery
-    // Spacer for Safari's UI controls
-    &::after
-      content ""
-      display block
-      flex 0 0 auto
-      height iPhoneUICompensation
-
 [data-component$="-target"]
   roundedChildRadius = 3px
 
@@ -159,6 +150,14 @@
     list-style none
     margin 0
     padding 2em 0 0
+
+    @media mobileMaxWidthQuery
+      // Spacer for Safari's UI controls
+      &::after
+        content ""
+        display block
+        flex 0 0 auto
+        height iPhoneUICompensation
 
     div, footer, header, section
       display block
