--- a/app/embed-box.styl
+++ b/app/embed-box.styl
@@ -11,8 +11,9 @@
 .embed-box[data-mode="modal"]
   bottom 0 !important
   display block
-  height 100vh !important
+  height 100% !important
   left 0 !important
+  max-height 100vh !important
   max-width 100vw !important
   opacity 0
   position fixed !important
@@ -42,5 +43,5 @@ body[data-embed-box-scroll-state="locked"]
   body, html
     &[data-embed-box-scroll-state="locked"]
       overflow hidden !important
-      position relative !important
+      position fixed !important
 
